# semchunk-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml  release.yaml
benches/: gutenberg.rs
scripts/: download_bench_files.sh  download_lang_files.sh  env.sh
src/: chunker.rs  lib.rs  splitter.rs
