[package]
name = "semchunk-rs"
version = "0.1.0"
authors = ["Dominic Tarro"]
description = "A fast and lightweight Rust library for splitting text into semantically meaningful chunks."
repository = "https://github.com/dominictarro/semchunk-rs"
license = "MIT"
readme = "README.md"
keywords = ["nlp", "text", "chunking", "semantic", "token"]
categories = ["text-processing"]
edition = "2021"

[dependencies]
bisection = "0.1.0"
regex = "1.11.1"
rust-bert = { version = "0.23.0", optional = true }
rust_tokenizers = { version = "8.1.1", optional = true }
tiktoken-rs = { version = "0.6.0", optional = true }

[features]
tiktoken-rs = ["dep:tiktoken-rs"]
rust-bert = ["dep:rust-bert"]
rust_tokenizers = ["dep:rust_tokenizers"]

[dev-dependencies]
criterion = "0.5.1"
glob = "0.3.1"

[[bench]]
name = "gutenberg"
harness = false
